// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionListItem should render a received transaction 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-1 w-40 text-theme-neutral-600 text-sm"
        >
           
          17 Mar 2020 22:02:10
           
        </td>
        <td
          class="py-4 mt-1 w-24"
        >
          <div
            class="sc-AxjAm jQEjKi border-theme-success-300 text-theme-success-400 -mr-1"
          >
            <div
              class="sc-AxirZ RbXVX"
              height="40"
              width="40"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxjAm iRwjdG"
          />
        </td>
        <td
          class="py-1 w-56"
        >
          <div
            class="inline-block truncate"
          >
            <span
              class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
              data-testid="address__wallet-name"
            >
              My Wallet
            </span>
            <span
              class="text-theme-neutral-400 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              ASuusX...GQ3kqT
            </span>
          </div>
        </td>
        <td
          class="py-1 text-right text-sm"
        >
          <div
            class="sc-AxiKw kNsium"
            color="success"
          >
            100 BTC
          </div>
        </td>
        <td
          class="py-1 text-right text-sm text-theme-neutral-500 w-32"
        >
          <div>
            1,000,000 USD
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TransactionListItem should render a send transaction 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-1 w-40 text-theme-neutral-600 text-sm"
        >
           
          17 Mar 2020 22:02:10
           
        </td>
        <td
          class="py-4 mt-1 w-24"
        >
          <div
            class="sc-AxjAm jQEjKi border-theme-danger-200 text-theme-danger-400 -mr-1"
          >
            <div
              class="sc-AxirZ RbXVX"
              height="40"
              width="40"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxjAm iRwjdG"
          />
        </td>
        <td
          class="py-1 w-56"
        >
          <div
            class="inline-block truncate"
          >
            <span
              class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
              data-testid="address__wallet-name"
            >
              My Wallet
            </span>
            <span
              class="text-theme-neutral-400 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              ASuusX...GQ3kqT
            </span>
          </div>
        </td>
        <td
          class="py-1 text-right text-sm"
        >
          <div
            class="sc-AxiKw fNUTOS"
            color="danger"
          >
            100 BTC
          </div>
        </td>
        <td
          class="py-1 text-right text-sm text-theme-neutral-500 w-32"
        >
          <div>
            1,000,000 USD
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
